# MotionStudio

./: README.md  generate-icon.ts  metadata.json  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Titlebar.tsx
src/lib/: SmartZoomEngine.ts
